fix artifact name.

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>geez.org</groupId>
-	<artifactId>ZaimaCorrect</artifactId>
+	<artifactId>ZaimaChecker</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
-	<name>Word DOCX Zaima Miliket Corrector</name>
+	<name>Word DOCX Zaima Miliket Checker</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.docx4j</groupId>
