--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>geez.org</groupId>
 	<artifactId>ZaimaChecker</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<name>Word Docx Zaima Miliket Checker</name>
 	<dependencies>
 		<dependency>
