--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>geez.org</groupId>
+	<groupId>org.geez</groupId>
 	<artifactId>ZaimaChecker</artifactId>
 	<version>0.4.0</version>
 	<name>Word Docx Zaima Miliket Checker</name>
