--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.docx4j</groupId>
-			<artifactId>docx4j</artifactId>
-			<version>6.0.1</version>
+			<artifactId>docx4j-JAXB-Internal</artifactId>
+			<version>8.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.apple</groupId>
